--- a/src/main/resources/public/scss/components/_typography.scss
+++ b/src/main/resources/public/scss/components/_typography.scss
@@ -1,14 +1,5 @@
-// @include font-face("building", building);
-// @include font-face("donau", donau);
-// @include font-face("madrasxb", madrasxb);
-// @include font-face("madrasxl", madrasxl);
-// @include font-face("alice", alice);
-// @include font-face("sacramento", sacramento);
 
-
-
-
-
+// ///////////////////////Typography/////////////////////
 
 h3 {
   font-size: 24px;
