--- a/src/main/resources/public/scss/components/_buttons.scss
+++ b/src/main/resources/public/scss/components/_buttons.scss
@@ -1,29 +1,34 @@
-.button {
-  background: #fcd703;
-  background-image: -webkit-linear-gradient(top, #fcd703, #e6c50c);
-  background-image: -moz-linear-gradient(top, #fcd703, #e6c50c);
-  background-image: -ms-linear-gradient(top, #fcd703, #e6c50c);
-  background-image: -o-linear-gradient(top, #fcd703, #e6c50c);
-  background-image: linear-gradient(to bottom, #fcd703, #e6c50c);
-  -webkit-border-radius: 28;
-  -moz-border-radius: 28;
-  border-radius: 28px;
+
+//////////////////////Submit Recipe Button//////////////////////
+
+.btn {
+  background: #ff9933;
+  background-image: -webkit-linear-gradient(top, #ff9933, #cc6600);
+  background-image: -moz-linear-gradient(top, #ff9933, #cc6600);
+  background-image: -ms-linear-gradient(top, #ff9933, #cc6600);
+  background-image: -o-linear-gradient(top, #ff9933, #cc6600);
+  background-image: linear-gradient(to bottom, #ff9933, #cc6600);
+  -webkit-border-radius: 5;
+  -moz-border-radius: 5;
+  border-radius: 5px;
   font-family: Arial;
-  color: $text-dark;
-  font-size: 26px;
-  padding: 20px 40px 20px 40px;
+  color: #ffffff;
+  font-size: 20px;
+  padding: 10px 40px 10px 40px;
   text-decoration: none;
 }
 
-.button:hover {
-  background: #f7e891;
-  background-image: -webkit-linear-gradient(top, #f7e891, #fae257);
-  background-image: -moz-linear-gradient(top, #f7e891, #fae257);
-  background-image: -ms-linear-gradient(top, #f7e891, #fae257);
-  background-image: -o-linear-gradient(top, #f7e891, #fae257);
-  background-image: linear-gradient(to bottom, #f7e891, #fae257);
+.btn:hover {
+  background: #FFC57E;
+  background-image: -webkit-linear-gradient(top, #FFC57E, #FF9D26);
+  background-image: -moz-linear-gradient(top, #FFC57E, #FF9D26);
+  background-image: -ms-linear-gradient(top, #FFC57E, #FF9D26);
+  background-image: -o-linear-gradient(top, #FFC57E, #FF9D26);
+  background-image: linear-gradient(to bottom, #FFC57E, #FF9D26);
   text-decoration: none;
 }
+
+
 
 ///////////////DropDown Styling/////////////////////
 
@@ -145,6 +150,8 @@
 .rec-list-btn {
   width: 10vw;
 }
+
+// ////////////////////////Forms///////////////////////////
 
 form {
   position: relative;
@@ -290,6 +297,8 @@ form.drink-number {
   background-image: linear-gradient(to bottom, #FFC57E, #FF9D26);
   text-decoration: none;
 }
+
+// /////////////////////////Extra Margin//////////////////
 
 .ex-mar {
   margin: .5vw;
