--- a/src/main/resources/public/scss/layout/_layout.scss
+++ b/src/main/resources/public/scss/layout/_layout.scss
@@ -52,6 +52,9 @@ html {
 
 /*///////////////////////Begin Code////////////////////////*/
 
+
+// ///////////////////////////Layout////////////////////////////
+
 html, body, .container {
         width: 100%;
         height: 100vh;
@@ -190,116 +193,3 @@ th {
 td {
   padding: .5vw;
 }
-
-/*////////////////////BEGIN GALLERY PAGE/////////////////////*/
-
-// .container2 {
-//   display: flex;
-//   height: 100vh;
-//   position: relative;
-//   margin: 0 auto;
-//   flex-direction: row;
-//   flex-wrap: wrap;
-//   align-items: stretch;
-//   justify-content: space-between;
-// }
-//
-// .container2 > * {
-//   flex: 1 1 auto;
-// }
-//
-// .topbar {
-//   flex-wrap: wrap;
-//   width: 100vw;
-//   height: 10vh;
-//   background-color: $color-prim;
-// }
-//
-// .galleryrow {
-//   display: flex;
-//
-// }
-//
-// img[rel="img1"] {
-//   width: 50vw;
-//   height: 50vh;
-//   -webkit-transition: all 1s ease;
-//      -moz-transition: all 1s ease;
-//        -o-transition: all 1s ease;
-//       -ms-transition: all 1s ease;
-//           transition: all 1s ease;
-// }
-//
-// img[rel="img1"]:hover {
-//   -webkit-filter: grayscale(100%);
-// }
-//
-// img[rel="img2"] {
-//   width: 25vw;
-//   height: 50vh;
-//   -webkit-transition: all 500ms ease-in-out;
-//      -moz-transition: all 500ms ease-in-out;
-//        -o-transition: all 500ms ease-in-out;
-//       -ms-transition: all 500ms ease-in-out;
-//           transition: all 500ms ease-in-out;
-// }
-//
-// img[rel="img2"]:hover {
-//   -webkit-filter: grayscale(100%);
-// }
-//
-// img[rel="img3"] {
-//   width: 25vw;
-//   height: 50vh;
-//   -webkit-transition: all 500ms ease-in-out;
-//      -moz-transition: all 500ms ease-in-out;
-//        -o-transition: all 500ms ease-in-out;
-//       -ms-transition: all 500ms ease-in-out;
-//           transition: all 500ms ease-in-out;
-// }
-//
-// img[rel="img3"]:hover {
-//   -webkit-filter: grayscale(100%);
-// }
-//
-// img[rel="img4"] {
-//   width: 25vw;
-//   height: 50vh;
-//   -webkit-transition: all 500ms ease-in-out;
-//      -moz-transition: all 500ms ease-in-out;
-//        -o-transition: all 500ms ease-in-out;
-//       -ms-transition: all 500ms ease-in-out;
-//           transition: all 500ms ease-in-out;
-// }
-//
-// img[rel="img4"]:hover {
-//   -webkit-filter: grayscale(100%);
-// }
-//
-// img[rel="img5"] {
-//   width: 25vw;
-//   height: 50vh;
-//   -webkit-transition: all 500ms ease-in-out;
-//      -moz-transition: all 500ms ease-in-out;
-//        -o-transition: all 500ms ease-in-out;
-//       -ms-transition: all 500ms ease-in-out;
-//           transition: all 500ms ease-in-out;
-// }
-//
-// img[rel="img5"]:hover {
-//   -webkit-filter: grayscale(100%);
-// }
-//
-// img[rel="img6"] {
-//   width: 50vw;
-//   height: 50vh;
-//   -webkit-transition: all 500ms ease-in-out;
-//      -moz-transition: all 500ms ease-in-out;
-//        -o-transition: all 500ms ease-in-out;
-//       -ms-transition: all 500ms ease-in-out;
-//           transition: all 500ms ease-in-out;
-// }
-//
-// img[rel="img6"]:hover {
-//   -webkit-filter: grayscale(100%);
-// }
